# VRPoint

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/vr-exp-webapp-backend/: Cargo.toml  vr-exp-webapp-backend.did
src/vr-exp-webapp-backend/src/: lib.rs
src/vr-exp-webapp-frontend/: index.html  package.json
src/vr-exp-webapp-frontend/public/: barrel.glb
src/vr-exp-webapp-frontend/src/: App.jsx  Home.jsx  Index.jsx  animation.css  create.css  global.css  index.css  main.jsx
src/vr-exp-webapp-frontend/src/pages/: Buy.jsx  Create.jsx  Editor.jsx  Home.jsx  Index.jsx  Owned.jsx  Player.jsx  Sell.jsx  Transaction.jsx
src/vr-exp-webapp-frontend/src/widgets/: BuyBtn.jsx  BuyTable.jsx  CancelBtn.jsx  Card.jsx  DashboardNavBar.jsx  DescriptionBtn.jsx  Editor.jsx  Footer.jsx  Hero.jsx  LandingPageNavBar.jsx  ListedNFT.jsx  OwnedTable.jsx  PlayBtn.jsx  SellBtn.jsx  SellForm.jsx  TxnTable.jsx  Works.jsx
