[package]
name = "vr-exp-webapp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.5"
ic-cdk-macros = "0.18.5"
serde = "1.0.219"
serde_json = "1.0.140"
